<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_app_bar_about"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar_about"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:divider="?android:dividerHorizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/app_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="15dp"
                        android:layout_marginEnd="5dp"
                        android:src="@mipmap/ic_launcher"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:elevation="8dp"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:divider="?android:dividerHorizontal"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:onClick="navToSourceCode"
                            android:orientation="horizontal"
                            tools:ignore="PrivateResource">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:contentDescription="@string/code"
                                android:src="@drawable/code_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/text_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:text="@string/code"
                                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:onClick="showLibraries"
                            android:orientation="horizontal"
                            tools:ignore="PrivateResource">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:contentDescription="@string/libs"
                                android:src="@drawable/lib_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/text_lib"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:text="@string/libs"
                                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:onClick="showPriv"
                            android:orientation="horizontal"
                            tools:ignore="PrivateResource">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:contentDescription="@string/priv"
                                android:src="@drawable/privacy_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/text_priv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:text="@string/priv"
                                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:onClick="showLicense"
                            android:orientation="horizontal"
                            tools:ignore="PrivateResource">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:contentDescription="@string/license"
                                android:src="@drawable/license_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/text_license"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:text="@string/license"
                                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:divider="?android:dividerHorizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="15dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/myprofile"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/author"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_pers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:elevation="8dp"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:divider="?android:dividerHorizontal"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:onClick="emailDev"
                            android:orientation="horizontal"
                            tools:ignore="PrivateResource">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:contentDescription="@string/email"
                                android:src="@drawable/email_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/text_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:text="@string/email"
                                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/colorAccent"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleDuration="350">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:onClick="navToGit"
                            android:orientation="horizontal"
                            tools:ignore="PrivateResource">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:contentDescription="@string/git"
                                android:src="@drawable/github_icon" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/text_git"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:text="@string/git"
                                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>